--- a/simple-firebase-starter.html
+++ b/simple-firebase-starter.html
@@ -11,14 +11,14 @@
 		body {
 			background-color: #87CEFA;
 		}
-
 		#item-list {
 			list-style: none;
+
 			padding:0;
 		}
 
 		#item-list li {
-			background-color: #fff;
+			background-color: #7fffD4;
 			width: 240px;
 			margin-bottom: 10px;
 			padding: 10px 20px;
