--- a/simple-firebase-starter.html
+++ b/simple-firebase-starter.html
@@ -18,7 +18,7 @@
 		}
 
 		#item-list li {
-			background-color: #7fffD4;
+			background-color: #fff;
 			width: 240px;
 			margin-bottom: 10px;
 			padding: 10px 20px;
