Trying to add Image

--- a/simple-firebase-starter.html
+++ b/simple-firebase-starter.html
@@ -37,6 +37,8 @@
 			margin-bottom: 10px;
 		}
 
+  <img src="Beautiful-Urban.jpeg" alt="Beautiful Urban Image" width="128" height="128">
+
 	</style>
 
 </head>
