--- a/simple-firebase-starter.html
+++ b/simple-firebase-starter.html
@@ -28,7 +28,7 @@
 			border: 1px solid #eee;
 			cursor: pointer;
 			display: inline-block;
-			padding: 5px;
+			padding: 5px
 			background-color: #eee;
 		}
 
@@ -37,7 +37,7 @@
 			margin-bottom: 10px;
 		}
 
-  <img src="Beautiful-Urban.jpeg" alt="Beautiful Urban Image" width="128" height="128">
+  <img src="Beautiful-Urban-Image.jpeg" alt="Beautiful Urban Image" width="128" height="128">
 
 	</style>
 
