--- a/simple-firebase-starter.html
+++ b/simple-firebase-starter.html
@@ -8,7 +8,9 @@
 
 	<style>
 
-		body {
+		body 
+       <img src="Beautiful-Urban-Image.jpeg" alt="Beautiful Urban Image" width="128" height="128">
+    {
 			background-color: #7FFFD4;
 		}
 		#item-list {
@@ -36,8 +38,6 @@
 			display: block;
 			margin-bottom: 10px;
 		}
-
-  <img src="Beautiful-Urban-Image.jpeg" alt="Beautiful Urban Image" width="128" height="128">
 
 	</style>
 
