still Figuring out the Image Side of things

--- a/simple-firebase-starter.html
+++ b/simple-firebase-starter.html
@@ -9,7 +9,7 @@
 	<style>
 
 		body 
-       <img src="Beautiful-Urban-Image.jpeg" alt="Beautiful Urban Image" width="128" height="128">
+
     {
 			background-color: #7FFFD4;
 		}
@@ -38,7 +38,7 @@
 			display: block;
 			margin-bottom: 10px;
 		}
-
+      <img src="Armidale_Central_Park.jpeg" alt="Beautiful Urban Image" style="width=50pix;height=50px;">
 	</style>
 
 </head>
