crerated new file for css
called styles.css

--- a/index.html
+++ b/index.html
@@ -5,47 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-app.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/7.18.0/firebase-firestore.js"></script>
-
-	<style>
-
-		body 
-
-    {
-			background-color: #7FFFD4;
-		}
-		#item-list {
-			list-style: none;
-
-			padding:0;
-		}
-
-		#item-list li {
-			background-color: #fff;
-			width: 240px;
-			margin-bottom: 10px;
-			padding: 10px 20px;
-		}
-
-		#item-list div {
-			border: 1px solid #eee;
-			cursor: pointer;
-			display: inline-block;
-			padding: 5px
-			background-color: #eee;
-		}
-
-		input {
-			display: block;
-			margin-bottom: 10px;
-		}
-      <img src="Armidale_Central_Park.jpeg" alt="Beautiful Urban Image" style="width=50pix;height=50px;">
-	</style>
-
+  <link rel="stylesheet" href="styles.css">
 </head>
+  <img src="Armidale_Central_Park.jpeg" alt="Beautiful Urban Image" style="width=50pix;height=50px;">
 <body>
 
-
-	<h2>Items:</h2>
+	<h2 style="font-family:verdana;">Items For Sale:</h2>
 
 	<form id="add-item-form">
 		
