--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,9 @@
   
 <body>
 
-	<h1>Home</h1>
+
+
+  <h1>Contacts</h1>
   <h2>Items:</h2>
 
 	<form id="add-item-form">
@@ -29,18 +31,21 @@
 
 	<ul id ="item-list"></ul>
 
+  <footer>
+    
   <form id="navigation-bar">
+    
 
-<header>
-<ul>
+    <ul>
   <li><a href="index.html">Home</a></li>
   <li><a href=>News</a></li>
   <li><a href="contact.html">Contact</a></li>
   <li><a href=>About</a></li>
 </ul>
-</header>
 
-</form>
+  </form>
+
+  </footer>
 
 
 
