--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
   
 <body>
 
-	<h1>Home</h1>
+	<h1>About</h1>
   <h2>Items:</h2>
 
 	<form id="add-item-form">
@@ -34,9 +34,9 @@
 <header>
 <ul>
   <li><a href="index.html">Home</a></li>
-  <li><a href=>News</a></li>
+  <li><a href="news.html">News</a></li>
   <li><a href="contact.html">Contact</a></li>
-  <li><a href=>About</a></li>
+  <li><a href="about.html">About</a></li>
 </ul>
 </header>
 
