--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
 <header>
 <ul>
   <li><a href="index.html">Home</a></li>
-  <li><a href=>News</a></li>
+  <li><a href="news.html">News</a></li>
   <li><a href="contact.html">Contact</a></li>
-  <li><a href=>About</a></li>
+  <li><a href="about.html">About</a></li>
 </ul>
 </header>
 
