Added Borrow Option

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		  <option value="Free">Free</option>
 		  <option value="For Sale">For Sale</option>
 		  <option value="Exchange">Exchange</option>
+      <option value="To Borrow">To Borrow</option>
 		</select>
 
 		<button>Add Item</button>
